[gd_scene load_steps=9 format=2]

[ext_resource path="res://gameplay/hud/pause-screen/PauseScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/edosz.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/images/ui/pause/resume.png" type="Texture" id=3]
[ext_resource path="res://assets/images/ui/pause/quit.png" type="Texture" id=4]
[ext_resource path="res://assets/sound/sfx/pause_open.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/sfx/menu_selection.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/sfx/menu_confirm.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 160
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="PauseScreen" type="CanvasLayer" groups=["pause_sync"]]
pause_mode = 2
layer = 5
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )

[node name="CenterContainer" type="CenterContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Background/CenterContainer"]
margin_left = 615.0
margin_top = 390.0
margin_right = 1305.0
margin_bottom = 690.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Background/CenterContainer/VBoxContainer"]
margin_right = 690.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )
custom_constants/separation = 70

[node name="Player" type="Label" parent="Background/CenterContainer/VBoxContainer/HBoxContainer"]
margin_top = 60.0
margin_right = 117.0
margin_bottom = 239.0
custom_fonts/font = SubResource( 1 )
text = "P1"

[node name="Paused" type="Label" parent="Background/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 187.0
margin_top = 60.0
margin_right = 690.0
margin_bottom = 239.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1
valign = 1

[node name="Resume" type="Sprite" parent="Background/CenterContainer/VBoxContainer"]
position = Vector2( 345, 350 )
texture = ExtResource( 3 )
hframes = 2
frame = 1

[node name="Quit" type="Sprite" parent="Background/CenterContainer/VBoxContainer"]
position = Vector2( 345, 480 )
texture = ExtResource( 4 )
hframes = 2

[node name="PauseOpenSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="MenuSelectionSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="MenuConfirmSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "SFX"
